--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
               </div>
               <div class="featured-card-right">
-                <img src="./assets/images/card1.png" alt="">
+                <img src="./assets/images/testimonials1.jpg" alt="">
               </div>
             </div>
             <div class="featured-card">
@@ -353,7 +353,7 @@
 
               </div>
               <div class="featured-card-right">
-                <img src="./assets/images/card2.png" alt="">
+                <img src="./assets/images/testimonials2.jpg" alt="">
               </div>
             </div>
             <div class="featured-card">
@@ -379,7 +379,7 @@
 
               </div>
               <div class="featured-card-right">
-                <img src="./assets/images/card3.png" alt="">
+                <img src="./assets/images/testimonials3.jpg" alt="">
               </div>
             </div>
             <div class="featured-card">
@@ -405,7 +405,7 @@
 
               </div>
               <div class="featured-card-right">
-                <img src="./assets/images/card1.png" alt="">
+                <img src="./assets/images/testimonials4.jpg" alt="">
               </div>
             </div>
 
