--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <nav>
                 <a href="#" class="hover-this"><span>Home</span></a>
                 <a href="#" class="hover-this"><span>Studio</span></a>
-                <a href="#" class="hover-this"><span>Works</span></a>
+                <a href="work.html" class="hover-this"><span>Works</span></a>
                 <a href="#" class="hover-this"><span>News</span></a>
                 <div class="cursor"></div>
               </nav>
