adding new page contact us

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
             <i class="bi bi-plus-lg"></i>
           </div>
           <div class="text">
-            <a href="#">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
             <i class="bi bi-plus-lg"></i>
           </div>
         </nav>
@@ -156,7 +156,7 @@
             </div>
 
             <div class="text">
-              <h2>Archin Studio</h2>
+              <h2>Aychin Studio</h2>
             </div>
           </div>
 
@@ -290,5 +290,6 @@
 
 </body>
 <script src="./assets/js/work.js"></script>
+
 
 </html>
