--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <i class="bi bi-plus-lg"></i>
           </div>
           <div class="text">
-            <a href="#">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
             <i class="bi bi-plus-lg"></i>
           </div>
         </nav>
